infra/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: w255
  labels:
    istio-injection: enabled
