infra/service-prediction-consumer.yaml
apiVersion: v1
kind: Service
metadata:
   name: webapp
   namespace: w255
spec:
   type: LoadBalancer
   ports:
      - port: 5000
   selector:
      app: pythonapi-consumer
