infra/service-prediction.yaml
apiVersion: v1
kind: Service
metadata:
   name: frontend
   namespace: w255
spec:
   type: LoadBalancer
   ports:
      - port: 8000
   selector:
      app: pythonapi
