infra/service-redis.yaml
apiVersion: v1
kind: Service
metadata:
   name: redis
   namespace: w255
spec:
   selector:
      app: redisserver
   ports:
      - protocol: TCP
        port: 6379
